# mkdocs-extra-sass-plugin

./: .editorconfig  .flake8  LICENSE.md  MANIFEST.in  README.md  pyproject.toml
mkdocs_extra_sass_plugin/: plugin.py
tests/: test_extra_sass_plugin.py
